--- a/package.json
+++ b/package.json
@@ -12,10 +12,15 @@
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^3.0.1",
     "@tsconfig/svelte": "^5.0.2",
+    "less": "^4.2.0",
     "svelte": "^4.2.8",
     "svelte-check": "^3.6.2",
+    "svelte-preprocess-less": "^0.4.0",
     "tslib": "^2.6.2",
     "typescript": "^5.2.2",
     "vite": "^5.0.8"
+  },
+  "dependencies": {
+    "svelte-spa-router": "^4.0.0"
   }
 }
