--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   },
   "type": "module",
   "dependencies": {
+    "axios": "^1.6.2",
     "bits-ui": "^0.11.8",
     "clsx": "^2.0.0",
     "lucide-svelte": "^0.299.0",
